package examen_abril;

public enum Experiencia {
    HORRIBLE, MEJORABLE, INTUITIVA, EXCELENTE
}
